<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="140dp"
        android:layout_marginTop="0dp"
        android:background="#F44336"
        android:fontFamily="casual"
        android:text="@string/raptors"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/team1_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="286dp"
        android:layout_marginTop="75dp"
        android:background="#FF5722"
        android:onClick="team1_increment"
        android:text="@string/t1_increase"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/team1score"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="75dp"
        android:background="#4CAF50"

        android:text="@string/t1_score"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/team1_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:background="#FF5722"
        android:onClick="team1_decrement"
        android:text="@string/t1_decrease"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="270dp"
        android:background="#F44336"
        android:fontFamily="casual"
        android:text="@string/warriors"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/team2score"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="118dp"
        android:background="#4CAF50"
        android:text="@string/t2_score"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/team2_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="225dp"
        android:background="#FF5722"
        android:onClick="team2_increment"
        android:text="@string/t2_increase"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/team2_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="225dp"
        android:background="#FF5722"
        android:onClick="team2_decrement"
        android:text="@string/t2_decrease"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/giveWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="60dp" />

    <Button
        android:id="@+id/redColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:background="@color/redBackground"
        android:onClick="newBackground"
        android:text="Red" />

    <Button
        android:id="@+id/blueColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginBottom="40dp"
        android:background="@color/blueBackground"
        android:onClick="newBackground"
        android:text="Blue" />

    <Button
        android:id="@+id/purpleColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/purpleBackground"
        android:onClick="newBackground"
        android:text="Purple" />



</RelativeLayout>