<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context=".WinnerActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:background="#E91E63"
        android:contentDescription="@string/trophy"
        app:srcCompat="@drawable/nba_trophy" />

    <TextView
        android:id="@+id/displayWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="#00BCD4"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/call_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Call a friend"
        android:inputType="phone"
        android:textStyle="bold" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getCall"
        android:text="@string/call" />

    <EditText
        android:id="@+id/send_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Send a message"
        android:inputType="textLongMessage"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getSend"
        android:text="@string/send" />

    <EditText
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Basketball near me"
        android:inputType="text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getSearch"
        android:text="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yellow"
            android:background="@color/yellowBackground"
            android:onClick="newBackground" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Blue"
            android:background="@color/blueBackground"
            android:onClick="newBackground" />

        <Button
            android:id="@+id/purpleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Purple"
            android:background="@color/purpleBackground"
            android:onClick="newBackground" />
    </LinearLayout>

</LinearLayout>